Implements delete and delete tests.
